Added DefaultCheckbox to Office and Updated JSON controller to return this info

--- a/StartMeUp/StartMeUp/App_Data/packages/installed/installedPackages.config
+++ b/StartMeUp/StartMeUp/App_Data/packages/installed/installedPackages.config
@@ -357,4 +357,43 @@ The release script will amend all assembly versions for the package, build the s
     <loadcontrol>
     </loadcontrol>
   </package>
+  <package id="4" version="1.1" url="http://our.umbraco.org/projects/" name="The Dashboard" folder="bd26a3c2-3e31-45fb-8e22-a424eae04b40" packagepath="" repositoryGuid="" packageGuid="" hasUpdate="False" enableSkins="False" skinRepoGuid="00000000-0000-0000-0000-000000000000">
+    <license url="http://opensource.org/licenses/MIT">MIT license</license>
+    <author url="http://twitter.com/markusjoha">Markus Johansson</author>
+    <readme><![CDATA[]]></readme>
+    <actions>
+      <Action runat="install" undo="true" alias="TheDasboard">
+      </Action>
+      <Action runat="install" alias="RemoveOldInstallation">
+      </Action>
+    </actions>
+    <datatypes>
+    </datatypes>
+    <content nodeId="" loadChildNodes="False">
+    </content>
+    <templates>
+    </templates>
+    <stylesheets>
+    </stylesheets>
+    <documenttypes>
+    </documenttypes>
+    <macros>
+    </macros>
+    <files>
+      <file>/App_Plugins/TheDashboard/package.manifest</file>
+      <file>/App_Plugins/TheDashboard/TheDashboard.controller.js</file>
+      <file>/App_Plugins/TheDashboard/TheDashboard.css</file>
+      <file>/App_Plugins/TheDashboard/TheDashboard.html</file>
+      <file>/App_Plugins/TheDashboard/TheDevDashboard.controller.js</file>
+      <file>/App_Plugins/TheDashboard/TheDevDashboard.html</file>
+      <file>/App_Plugins/TheDashboard/umbraco-guy.png</file>
+      <file>/bin/TheDashboard.dll</file>
+    </files>
+    <languages>
+    </languages>
+    <dictionaryitems>
+    </dictionaryitems>
+    <loadcontrol>
+    </loadcontrol>
+  </package>
 </packages>
