--- a/StartMeUp/StartMeUp/Config/Dashboard.config
+++ b/StartMeUp/StartMeUp/Config/Dashboard.config
@@ -1,5 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <dashBoard>
+  <section alias="TheDevDashboard">
+    <areas>
+      <area>developer</area>
+    </areas>
+    <tab caption="Developer dashboard">
+      <control addPanel="true" panelCaption="">/app_plugins/TheDashboard/TheDevDashboard.html</control>
+    </tab>
+  </section>
+  <section alias="TheDashboard">
+    <areas>
+      <area>content</area>
+    </areas>
+    <tab caption="Welcome">
+      <control addPanel="true" panelCaption="">/app_plugins/TheDashboard/TheDashboard.html</control>
+    </tab>
+  </section>
   <section alias="StartupSettingsDashboardSection">
     <areas>
       <area>settings</area>
