--- a/StartMeUp/StartMeUp/Web.config
+++ b/StartMeUp/StartMeUp/Web.config
@@ -48,6 +48,7 @@
     <add key="owin:appStartup" value="UmbracoDefaultOwinStartup" />
     <add key="Umbraco.ModelsBuilder.Enable" value="true" />
     <add key="Umbraco.ModelsBuilder.ModelsMode" value="PureLive" />
+    <add key ="PostcodesRootDocTypeAlias" value="settings"/>
   </appSettings>
   <connectionStrings>
     <remove name="umbracoDbDSN" />
